# rust/src/models/mod.rs
@@ -58,6 +58,12 @@ pub mod deny_request_request;
 pub use self::deny_request_request::DenyRequestRequest;
 pub mod deny_request_response;
 pub use self::deny_request_response::DenyRequestResponse;
+pub mod expand_relation_request;
+pub use self::expand_relation_request::ExpandRelationRequest;
+pub mod expand_relation_response;
+pub use self::expand_relation_response::ExpandRelationResponse;
+pub mod expand_relation_response_tree;
+pub use self::expand_relation_response_tree::ExpandRelationResponseTree;
 pub mod get_approval_status_response;
 pub use self::get_approval_status_response::GetApprovalStatusResponse;
 pub mod get_approval_status_response_approved_by;
