# typescript/models/index.ts
@@ -28,6 +28,9 @@ export * from './create-task-request';
 export * from './create-task-response';
 export * from './deny-request-request';
 export * from './deny-request-response';
+export * from './expand-relation-request';
+export * from './expand-relation-response';
+export * from './expand-relation-response-tree';
 export * from './get-approval-status-response';
 export * from './get-approval-status-response-approved-by';
 export * from './get-current-agent-response';
